Fix an issue in ForecastTile where icons and texts were not aligned.

--- a/weather-app/src/components/search-suggestion.css
+++ b/weather-app/src/components/search-suggestion.css
@@ -82,8 +82,9 @@
     border: 1px solid rgba(158, 243, 232, 0.3);
     border-top-left-radius: 0;
     border-bottom-left-radius: 0;
-    display: flex;
     width: 20%;
+    justify-content: center;
+    align-items: center;
 }
 
 .submit-search:hover {
